packages/tree-sitter-fysh/test/corpus/aquarium.txt
=================
Aquarium
=================

[ ><{> - ><{> ] ~
[] ~

-----------------------

(source_file
  (expression_statement
    (aquarium
      (positive_scales
        (one))
      (positive_scales
        (one))))
  (expression_statement
    (aquarium)))
