packages/tree-sitter-fysh/test/corpus/biblical.txt
================================================================================
Biblically accurate fysh
================================================================================
><})oooooooooo> ~
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (positive_scales
      (one)
      (zero))))
