packages/tree-sitter-fysh/test/corpus/if_else.txt
================================================================================
If/Else
================================================================================

><(((^> [ ><steven> o~ ><{((°> ]
><>
	<steven><< ~
<><

><(((*> ><(((^> [ ><steven> ~o ><{((°> ]
><>
	>><steven> ~
<><

><(((*>
><>
	><steven> ≈ ><(((°> ~
<><

--------------------------------------------------------------------------------

(source_file
  (if_statement
    (happy_fysh)
    (fysh_tank
      (binary_expression
        (positive_ident)
        (positive_scales
          (one)
          (zero)
          (zero))))
    (block
      (dec_statement))
    (dead_fysh)
    (if_statement
      (happy_fysh)
      (fysh_tank
        (binary_expression
          (positive_ident)
          (positive_scales
            (one)
            (zero)
            (zero))))
      (block
        (inc_statement))
      (dead_fysh)
      (block
        (assignment_statement
          (positive_ident)
          (positive_scales
            (zero)
            (zero)
            (zero)))))))
