test/corpus/binary.txt
================================================================================
Binary Expressions
================================================================================

><steven> ≈ ><{{(({°> 💔 ><{({°> ~
><steven> = ><{{(({o> </3 ><{({o> ~
><steven> ≈ ><{{(({°> ><{{(°> ♡ ><{{(({°> <°}})>< 💔 ( ><{{(°> ><{{(°> )  ~

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (positive_ident
      (name))
    (binary_expression
      (positive_literal
        (scales
          (one)
          (one)
          (zero)
          (zero)
          (one)))
      (positive_literal
        (scales
          (one)
          (zero)
          (one)))))
  (assignment_statement
    (positive_ident
      (name))
    (binary_expression
      (positive_literal
        (scales
          (one)
          (one)
          (zero)
          (zero)
          (one)))
      (positive_literal
        (scales
          (one)
          (zero)
          (one)))))
  (assignment_statement
    (positive_ident
      (name))
    (binary_expression
      (addition
        (binary_expression
          (addition
            (positive_literal
              (scales
                (one)
                (one)
                (zero)
                (zero)
                (one)))
            (binary_expression
              (positive_literal
                (scales
                  (one)
                  (one)
                  (zero)))
              (positive_literal
                (scales
                  (one)
                  (one)
                  (zero)
                  (zero)
                  (one))))))
        (binary_expression
          (negative_literal
            (scales
              (one)
              (one)
              (zero)))
          (fysh_bowl
            (binary_expression
              (addition
                (positive_literal
                  (scales
                    (one)
                    (one)
                    (zero)))
                (positive_literal
                  (scales
                    (one)
                    (one)
                    (zero)))))))))))
