test/corpus/comment.txt
================================================================================
With comments
================================================================================
></*>
Some happy fysh swimming around
Hope they don't get eaten
<*/><

><{{> ~

></*> can i do this tho <*/><

><//> Yes you can!
--------------------------------------------------------------------------------

(source_file
  (multiline_comment)
  (expression_statement
    (positive_scales
      (scales
        (one)
        (one))))
  (multiline_comment)
  (comment))
