test/corpus/hearts.txt
================================================================================
Hearts
================================================================================
><})> <3 ><{(o> ~
><})> ♡  ><{(o> ~
><})> </3 ><{(o> ~
><})> 💔 ><{(o> ~
><})> ❤️‍🩹 ><{(o> ~
><}}-}}> ~
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (binary_expression
      (positive_scales
        (scales
          (one)
          (zero)))
      (positive_scales
        (scales
          (one)
          (zero)))))
  (expression_statement
    (binary_expression
      (positive_scales
        (scales
          (one)
          (zero)))
      (positive_scales
        (scales
          (one)
          (zero)))))
  (expression_statement
    (binary_expression
      (positive_scales
        (scales
          (one)
          (zero)))
      (positive_scales
        (scales
          (one)
          (zero)))))
  (expression_statement
    (binary_expression
      (positive_scales
        (scales
          (one)
          (zero)))
      (positive_scales
        (scales
          (one)
          (zero)))))
  (expression_statement
    (binary_expression
      (positive_scales
        (scales
          (one)
          (zero)))
      (positive_scales
        (scales
          (one)
          (zero)))))
  (expression_statement
    (positive_bones
      (bones
        (one)
        (one)
        (spine)
        (one)
        (one)))))
