test/corpus/sub.txt
================================================================================
SUBroutines
================================================================================

>(foo) ><arg1> ><arg2> ><arg3>
><>
    o+) ><local> ~
    (+o ><local> ><arg1> ><arg2> <arg3>< ~
<><

[><}> >(foo) (><}> ><}>) ><}>] ~
[>(foo) ><}> (><}> ><}>) ><}>] ~
[><}> (><}> ><}>) ><}> (foo)<] ~

--------------------------------------------------------------------------------

(source_file
  (subroutine
    (left_sub)
    (positive_ident)
    (positive_ident)
    (positive_ident)
    (block
      (anchor_statement
        (positive_ident))
      (anchor_statement
        (binary_expression
          (addition
            (binary_expression
              (addition
                (binary_expression
                  (addition
                    (positive_ident)
                    (positive_ident)))
                (positive_ident)))
            (negative_ident))))))
  (expression_statement
    (call_expression
      (positive_literal
        (scales
          (one)))
      (left_sub)
      (fysh_bowl
        (binary_expression
          (addition
            (positive_literal
              (scales
                (one)))
            (positive_literal
              (scales
                (one))))))
      (positive_literal
        (scales
          (one)))))
  (expression_statement
    (call_expression
      (left_sub)
      (positive_literal
        (scales
          (one)))
      (fysh_bowl
        (binary_expression
          (addition
            (positive_literal
              (scales
                (one)))
            (positive_literal
              (scales
                (one))))))
      (positive_literal
        (scales
          (one)))))
  (expression_statement
    (call_expression
      (positive_literal
        (scales
          (one)))
      (fysh_bowl
        (binary_expression
          (addition
            (positive_literal
              (scales
                (one)))
            (positive_literal
              (scales
                (one))))))
      (positive_literal
        (scales
          (one)))
      (right_sub))))
